baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_class_span/baml_tests__diagnostic_errors__duplicate_class_span__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.A {
  field: string
}
class user.A {
  field: string
}
type user.A = int
function user.from_json(j: baml.json.json) -> user.A  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.A  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "field": self.field.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "field": self.field.to_json() }
}
