baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_class_span/baml_tests__diagnostic_errors__duplicate_class_span__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.A {
  field: string
}
class user.A {
  field: string
}
class user.A$stream {
  field: string | null
}
type user.A = int
type user.A$stream = int
