baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_class_span/baml_tests__diagnostic_errors__duplicate_class_span__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.A {
  field: string
}
function user.A.to_json(self: user.A) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<A>(self)) : baml.json.json
}
function user.A.from_json(j: baml.json.json) -> user.A throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.A
}
class user.A {
  field: string
}
function user.A.to_json(self: user.A) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<A>(self)) : baml.json.json
}
function user.A.from_json(j: baml.json.json) -> user.A throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.A
}
type user.A = int
class user.A$stream {
  field: null | string
}
type user.A$stream = int
