baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_class_span/baml_tests__diagnostic_errors__duplicate_class_span__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 29034
---
=== COMPILER2 DIAGNOSTICS ===
  [validation] Error: Name `A` defined 3 times as: class, class, type
   ╭─[ repro.baml:5:7 ]
   │
 1 │ class A {
   │       ┬  
   │       ╰── first defined as class here
   │ 
 5 │ class A {
   │       ┬  
   │       ╰── duplicate class definition
   │ 
 9 │ type A = int
   │      ┬  
   │      ╰── duplicate type definition
   │ 
   │ Note: Error code: E0011
───╯
